feat: output layout adjust and complexity by setting

--- a/App.config
+++ b/App.config
@@ -4,9 +4,12 @@
     <!-- Folder containing the source .lst files -->
     <add key="SourceFolder" value="C:\Development\cobolcode\FD" />
     <!-- Full path for the CSV output file -->
-    <add key="OutputFile" value="C:\Development\cobolcode\FD\output.csv" />
+    <add key="OutputFile" value="C:\Development\cobolcode\FD\output\output.csv" />
     <!-- Optional: file extension filter, defaults to "*.lst" if not specified -->
     <add key="FileExtension" value="*.*" />
+    <!-- Complexity thresholds for DET evaluation: Low ≤ ComplexityLowThreshold, Average ≤ ComplexityAverageThreshold, High > ComplexityAverageThreshold -->
+    <add key="ComplexityLowThreshold" value="19" />
+    <add key="ComplexityAverageThreshold" value="50" />
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
